--- a/Basic-JavaScript-Projects/Project1_expressions_alert/index.html
+++ b/Basic-JavaScript-Projects/Project1_expressions_alert/index.html
@@ -7,4 +7,7 @@
 
 <body>
     <script src="JS/main.js"></script>
+
+    <button onclick="document.getElementById('demo').innerHTML=Date()">The time is?</button>
+    <p id="demo"></p>
 </body>
