math operations commit

--- a/Basic-JavaScript-Projects/Project3_math_operators/index.html
+++ b/Basic-JavaScript-Projects/Project3_math_operators/index.html
@@ -5,6 +5,14 @@
     </head>
 
     <body>
-        <p id="Math"></p> 
+    <!--Using buttong element to keep math functions separate-->    
+        <button id="Math" onclick="addition_Function()">2+10</button> 
+        <button id="Math1" onclick="substraction_Function()">12-2</button>
+        <button id="Math2" onclick="multiplication()">6x2</button>
+        <button id="Math3" onclick="division()">12/6</button>
+        <button id="Math4" onclick="more_Math()">(10+2)2/6-1</button>
+        <button id="Math5" onclick="modulus_Operator()">7/3</button>
+        <button id="Math6" onclick="negation_Operator()">Negative 10</button>
+        
     </body>
 </html>
