--- a/Basic-JavaScript-Projects/Project6_ternary__operators_construction/index.html
+++ b/Basic-JavaScript-Projects/Project6_ternary__operators_construction/index.html
@@ -6,7 +6,7 @@
 
     <body>
 
-        <button onclick="">Click Here</button>
+        <button onclick="myFunction()">Click Here</button>
         <p id="New_and_This"></p>
         
     </body>
