JS Project 6 Assignment

--- a/Basic-JavaScript-Projects/Project6_ternary__operators_construction/index.html
+++ b/Basic-JavaScript-Projects/Project6_ternary__operators_construction/index.html
@@ -6,8 +6,18 @@
 
     <body>
 
+        <!--Ternary Operation-->
+        <p>Voters must be at least 18 years old to vote.</p>
+        <input id="Age" value="18"/>
+        <button onclick="Vote_Function()">Click Here</button>
+        <p id="Vote"></p>
+
+        <!--Constructor Function-->
         <button onclick="myFunction()">Click Here</button>
         <p id="New_and_This"></p>
+
+        <!--Nested Function-->
+        <p id="Counting" onclick="count_Function()">Click Here</p>
         
     </body>
 </html>
