JS project7 commit

--- a/Basic-JavaScript-Projects/Project7_scope_time_function/index.html
+++ b/Basic-JavaScript-Projects/Project7_scope_time_function/index.html
@@ -7,6 +7,15 @@
     <body>
 
         <p id="Greeting" onclick="get_Date()">Click Here.</p>
-        <p id="Time" onclick="get_Time()">Click Here</p>
+        
+
+        <p>Write your age:</p>
+        <input id="Age" value=""/>
+        <p id="How_old_are_you?"></p>
+        <button onclick="Age_Function()">Click Here</button>
+
+        <p id="Time_of_day"></p>
+        <button onclick="Time_function()">Click here to ther time.</button>
+
     </body>
 </html>
