--- a/Basic-JavaScript-Projects/Project8_string_methods/index.html
+++ b/Basic-JavaScript-Projects/Project8_string_methods/index.html
@@ -14,6 +14,15 @@
 
         <p id="upper_case"></p>
 
+        <p id="Numbers_to_string"></p>
+        <button onclick="string_Method()">Click Here</button>
+
+        <p id="Precision"></p>
+        <button onclick="precision_Method()">Click Here!</button>
+
+        <p id="Fixed"></p>
+        <button onclick="toFixed_Method()">Click Here</button>
+
         
     </body>
 </html>
