--- a/Basic-JavaScript-Projects/Project10_loops_arrays/index.html
+++ b/Basic-JavaScript-Projects/Project10_loops_arrays/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="JS/main.js"></script>
+        <script src="JS/main.js" defer></script>
     </head>
 
     <body>
