--- a/Basic-JavaScript-Projects/JavaScript_Projects/HTML_1.html
+++ b/Basic-JavaScript-Projects/JavaScript_Projects/HTML_1.html
@@ -19,4 +19,11 @@
     <button onclick="Color_Function()">Submit Color</button>
     <p id="Output"></p>
 
+    <h1 class="Click">This text will change!</h1>
+    <h3 class="Click">This text will not change.</h3>
+    <button onclick="Change_Function()">Click me!</button>
+
+    <canvas id="myCanvas" width="700" height="350" style="border:5px solid black"></canvas>
+
+
 </html>
