--- a/Basic-JavaScript-Projects/JavaScript_Projects/HTML_1.html
+++ b/Basic-JavaScript-Projects/JavaScript_Projects/HTML_1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="Javascript/JavaScript_1.js"></script>
+        <script src="Javascript/JavaScript_1.js" defer></script>
     </head>
     <h1>What is your favorite color?</h1>
     <h3>Pick your favorite color from this list.</h3>
@@ -23,7 +23,7 @@
     <h3 class="Click">This text will not change.</h3>
     <button onclick="Change_Function()">Click me!</button>
 
-    <canvas id="myCanvas" width="700" height="350" style="border:5px solid black"></canvas>
+    <canvas id="my_Canvas" width="700" height="350" style="border:5px solid black"></canvas>
 
 
 </html>
