--- a/Basic-JavaScript-Projects/Pizza_Project/Pizza.html
+++ b/Basic-JavaScript-Projects/Pizza_Project/Pizza.html
@@ -16,7 +16,7 @@
                     <h3>SIZE:</h3>
                     <input class="size" type="radio" name="Size" value="Personal Pizza"> Personal Pizza<br>
                     <input class="size" type="radio" name="Size" value="Small Pizza"> Small Pizza<br>
-                    <input class="size" type="radio" name="Size" value="Mediem Pizza"> Medium Pizza<br>
+                    <input class="size" type="radio" name="Size" value="Medium Pizza"> Medium Pizza<br>
                     <input class="size" type="radio" name="Size" value="Large Pizza"> Large Pizza<br>
                     <input class="size" type="radio" name="Size" value="Extra Large Pizza"> Extra Large Pizza<br>
                     <input class="size" type="radio" name="Size" value="Deep Dish Pizza"> Deep Dish Pizza<br>
@@ -33,11 +33,11 @@
                 </div>
                 <div class="menu right">
                     <h3>VEGETABLES:</h3>
-                    <input class="toppings" type="checkbox" name="vegetable" value="Mushroom">Mushroom<br>
-                    <input class="toppings" type="checkbox" name="vegetable" value="Onions">Onions<br>
-                    <input class="toppings" type="checkbox" name="vegetable" value="Tomatoes">Tomatoes<br>
-                    <input class="toppings" type="checkbox" name="vegetable" value="Olives">Olives<br>
-                    <input class="toppings" type="checkbox" name="vegetable" value="Green Peppers">Green Peppers<br>
+                    <input class="toppings" type="checkbox" name="Topping" value="Mushroom">Mushroom<br>
+                    <input class="toppings" type="checkbox" name="Topping" value="Onions">Onions<br>
+                    <input class="toppings" type="checkbox" name="Topping" value="Tomatoes">Tomatoes<br>
+                    <input class="toppings" type="checkbox" name="Topping" value="Olives">Olives<br>
+                    <input class="toppings" type="checkbox" name="Topping" value="Green Peppers">Green Peppers<br>
                 </div>
                 <div id="cart">
                     <div id="showText"></div>
